--- a/glacier_fronts.ipynb
+++ b/glacier_fronts.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,9 @@
    "outputs": [],
    "source": [
     "metrics=acc_glacier\n",
-    "wd=1e-2"
+    "wd=1e-2\n",
+    "class_weights = Tensor([375.,1.]).cuda() # increase penalty on calving front pixels to handle class imbalance.\n",
+    "loss_func = CrossEntropyFlat(weight=class_weights,axis=1)"
    ]
   },
   {
@@ -228,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn = unet_learner(data, models.resnet34, metrics=metrics, wd=wd)"
+    "learn = unet_learner(data, models.resnet34, loss_func=loss_func, metrics=metrics, wd=wd)"
    ]
   },
   {
@@ -284,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
