--- a/glacier_fronts.ipynb
+++ b/glacier_fronts.ipynb
@@ -218,7 +218,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics=acc_glacier\n",
+    "def iou(input, target):\n",
+    "    return dice(input, target, iou=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics=[iou,acc_glacier]\n",
     "wd=1e-2\n",
     "class_weights = Tensor([375.,1.]).cuda() # increase penalty on calving front pixels to handle class imbalance.\n",
     "loss_func = CrossEntropyFlat(weight=class_weights,axis=1)"
